enable JDK 20 preview features